build: include arrow dependency suggested compiler flags
This follows https://arrow.apache.org/docs/java/install.html,
where we add the indicated `--add-opens` flag.

This is meant to follow from https://github.com/googleapis/java-bigquery/pull/3811#issuecomment-2941443802